frontend-next-app/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --main-mmz-blue: #008cd8;
  --main-mmz-yellow: #fcf403;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}
.reset-map {
  z-index: 99999;
  position: absolute;
  top: 120;
  right: 12;
}
.reset-map:hover {
  filter: drop-shadow(var(--main-mmz-blue) 0 0 25px);
}
.mmz-heading {
  background: -webkit-linear-gradient(45deg, var(--main-mmz-blue), var(--main-mmz-yellow));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.heading-pic {
  filter: drop-shadow(var(--main-mmz-blue) 0 0 45px);
}

.btn-active {
  background-color: var(--main-mmz-blue);
}
.zoom-btn {
  position: absolute;
  right: 12;
  top: 30;
  z-index: 999999999;
}
.schoolItem {
  transition: filter 0.2s ease-out; /* Added transition */
}
.schoolItem:hover {
  filter: drop-shadow(var(--main-mmz-blue) 0 0 25px);
}
.przystanki-btn {
  z-index: 99999;
  position: absolute;
  top: 80;
  right: 12;
  transition: filter 0.2s ease-out; /* Added transition */
}
.przystanki-btn:hover {
  filter: drop-shadow(var(--main-mmz-blue) 0 0 25px);
}
.leaflet-marker-icon.leaflet-zoom-animated {
  transition: transform 0.3s ease-in-out;
}

.marker-cluster-small div,
.marker-cluster-medium div,
.marker-cluster-large div {
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  font-weight: bold;
  background: var(--main-mmz-blue) !important;
  color: white;
  box-shadow: 0px 0px 10px var(--main-mmz-blue);
}

.custom-bus-cluster-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}

.custom-bus-cluster {
  position: relative;
  width: 45px;
  height: 45px;
  background-color: rgba(30, 60, 90, 0.9);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0px 0px 5px rgba(30, 60, 90, 0.7);
  color: white;
  font-size: 16px;
  font-weight: bold;
}

.bus-icon {
  position: absolute;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 18px;
  height: 18px;
  background-image: url('/bus-icon.png');
  background-size: contain;
  background-repeat: no-repeat;
}

.bus-count {
  margin-top: 10px;
}
.navbar {
  z-index: 999999;
}

